# graph_py

./: .gitignore  Makefile  pyproject.toml
age/: .gitignore  Makefile  Readme.md  app.py  cli.sh  dns.py  dns_reccord_node.py  dns_utils.py  docker.sh  domain_node.py  main.py  net_graph.py  pyproject.toml  requirements.txt  vis.ipynb  vis.py  vis2.ipynb
data/: dns.out.jsonl  dns.sh  dnsr.out.jsonl  dnsr.sh
gendata/: info  resume.cfg
gendata/fefe.de.subfinder.out/: fefe.de.txt
grpy/: __main__.py  db.py  dns_record.py  domain.py
old/grpy/: Makefile  neo04.querries  pyproject.toml
old/grpy/grpy/: __main__.py  db.py  demo.py  dns_record.py  domain.py
old/grpy/testdata/: fefe.de.dnsx  heise.de.dnsx  heise.de.txt
old/neo4j/: Makefile  compose.yaml
testdata/: command.dnsx  domains.in  domains.out  fefe.de.txt
